# McBride-ARC-2024

./: LICENSE  README.md  kernel-metadata.json  main.py  mcbride-arc-2024.ipynb  practice_training_challenge.json  pyproject.toml  requirements.txt
data/: Articles.txt  model_response.txt
kaggle/input/arc-prize-2024/: arc-agi_evaluation_solutions.json  arc-agi_test_challenges.json
notebooks/: llama-3-2-gpu-optimized.ipynb  mcbride-arc-2024.ipynb
src/: augment_with_synonyms.py
src/faces/: llm_llama3_2_3B.py
src/utils/: prompt_library.py  utils.py
tests/: conftest.py  test_augment_with_synonyms.py  test_llm_llama3_2_3B.py  test_utils.py
